--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
         </style>
 		<script type="text/javascript"> 
 		function iframeCheckLogin() { 
-			// 转移到 open.xrkmonitor.cn 域名
+			// 转移到 open.xrkmonitor.cn 域名, 避免与主域 .xrkmonitor.com cookie 冲突
 			if(document.domain.indexOf('open.xrkmonitor.com') != -1) {
 				top.location = 'http://open.xrkmonitor.cn';
 				return;
