--- a/html/resource/dwz.frag.html
+++ b/html/resource/dwz.frag.html
@@ -1,27 +1,9 @@
-<textarea id="mypluginOpenInsUp">
-<ul id="mypluginCMIns">
-	<li rel="showinfo">查看本地安装版本</li>
-	<li rel="showinfo_up">查看最新版本</li>
-	<li rel="update">更新到最新版本</li>
-	<li rel="downconf">下载部署配置文件</li>
-	<li rel="downall">下载源码包</li>
-</ul>
-</textarea>
-
 <textarea id="mypluginOpenIns">
-<ul id="mypluginCMIns">
-	<li rel="showinfo">查看</li>
+<ul id="mypluginCM">
 	<li rel="downconf">下载部署配置文件</li>
 	<li rel="downall">下载源码包</li>
 </ul>
 </textarea>
-
-<textarea id="mypluginOpenUnIns">
-<ul id="mypluginCMUnIns">
-	<li rel="showinfo_up">查看</li>
-	<li rel="install">安装插件</li>
-</ul>
-</textarea> 
 
 <textarea id="dialogFrag"><div class="dialog" style="top:150px; left:300px;">
     <div class="dialogHeader" onselectstart="return false;" oncopy="return false;" onpaste="return false;" oncut="return false;">
