--- a/html/dmt_dlg_machine_status.html
+++ b/html/dmt_dlg_machine_status.html
@@ -1,7 +1,7 @@
 <script language="javascript" type="text/javascript">
 
 $(document).ready(function(){
-    var g_machine_plugin_info = $.parseJSON('<?cs var:config.machine_plugins ?>');
+    var g_machine_plugin_info = <?cs var:config.machine_plugins ?>;
     if(g_machine_plugin_info.count > 0) {
         var uhtml = '';
         var lt = g_machine_plugin_info.list;
