--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,5 +1,7 @@
 <a class="logo" href="http://xrkmonitor.com" target='_blank'><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
 <ul class="nav">
+	<li><a href="#" title='进入全屏' id='dc_btn_main_full'><i class='icon-resize-full icon-2x'></i>全屏</a></li>
+	<li><a href="http://xrkmonitor.com" target='_self' title='首页'><i class='icon-home icon-large'></i>首页</a></li>
 	<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=init_change_pwd" mask=true maxable=false
 		target="dialog" width="420" height="260"><i class="icon-key icon-large"></i>修改密码</a></li>
 	<li><a href="#" onclick='return dh_toUserCenter();'><i class="icon-user icon-large"></i><?cs var:comm.user_name ?></a></li>
