--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -13,7 +13,7 @@
 	<li class="selected"><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr">
 		<i class="icon-bar-chart icon-large"></i>上报查看</a></li>
 	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m"><i class="icon-cogs icon-large"></i>上报管理</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-move icon-large"></i></i>监控扩展</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-move icon-large"></i></i>监控插件</a></li>
 	<?cs if:comm.user_type == 1 ?>
 	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_user_manage'><i class="icon-group icon-large"></i>用户管理</a></li>
 	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv"><i class="icon-cog icon-large"></i>系统配置</a></li>
