--- a/html/dwz_left_plus.html
+++ b/html/dwz_left_plus.html
@@ -1,6 +1,6 @@
 <div class="accordion" fillSpace="sidebar">
 	<div class="accordionHeader">
-		<h2><i class="icon-move icon-large"></i>监控扩展<i class="icon icon-chevron-up"></i></h2>
+		<h2><i class="icon-move icon-large"></i>监控插件<i class="icon icon-chevron-up"></i></h2>
 	</div>
 	<div class="accordionContent">
 		<ul class="tree">
