--- a/html/dmt_dp_add_plugin.html
+++ b/html/dmt_dp_add_plugin.html
@@ -74,7 +74,7 @@ $(document).ready(function(){
 				    <td><?cs var:config.plugin_language ?></td>
 				    <td><?cs var:config.plugin_auth ?></td>
 				    <td><?cs var:config.plugin_last_version ?></td>
-				    <td class='detail'><a href='http://<?cs var:config.plugin_desc_url ?>' target='_blank'>详情</a></td>
+				    <td class='detail'><a href='<?cs var:config.plugin_desc_url ?>' target='_blank'>详情</a></td>
 			    </tr>
             </tbody>
         </table>
