--- a/html/index.html
+++ b/html/index.html
@@ -12,22 +12,13 @@
 		<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 		<meta name="renderer" content="webkit">
 		<link rel="icon" href="/xrkmonitor/images/zifu_48.ico">
-        <style type="text/css">
-            html, body
-            {
-                margin: 0px 0px;
-                width: 100%;
-                height: 100%;
-            }
-            iframe
-            {
-                margin: 0px 0px;
-                width: 100%;
-                height: 100%;
-            }
-        </style>
 		<script type="text/javascript"> 
 		function iframeCheckLogin() { 
+			if(document.domain.indexOf('open.xrkmonitor.com') != -1) {
+				top.location = 'http://open.xrkmonitor.cn';
+				return;
+			}
+
 			var g_support_var_css = false;
 			try {
 				document.documentElement.className = "js";
