--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -114,7 +114,7 @@ function <?cs var:config.plugin_pre ?>_GetInstallPluginShowInfo(idx, plugin, loc
 	else
 		shtml += '<?cs var:config.xrkmonitor_url ?>/monitor/download/plugin/plugin_def_pic.png';
 	shtml += "'></img>";
-    if(typeof plugin.price != 'undefined') {
+    if(typeof plugin.price != 'undefined' && plugin.price > 0) {
         var p = plugin.price/100.0;
         shtml += "<div class='pluginPrice'>￥" + p.toFixed(2) + "</div>";
     }
